--- a/NET.S.2018.Chebotkov.5/GreatestCommonDivisor.Tests/GreatestCommonDivisor.Tests.csproj
+++ b/NET.S.2018.Chebotkov.5/GreatestCommonDivisor.Tests/GreatestCommonDivisor.Tests.csproj
@@ -64,6 +64,10 @@
       <Project>{cba41b66-92e8-4f8b-9a41-dfa57d722f86}</Project>
       <Name>EuclideanAlgorithms</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SteinsAlgorithm\SteinsAlgorithm.csproj">
+      <Project>{f7d64285-3754-44b1-a737-4f34b393f604}</Project>
+      <Name>SteinsAlgorithm</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
