--- a/NET.S.2018.Chebotkov.5/ExtensionForDouble/ExtensionForDouble.csproj
+++ b/NET.S.2018.Chebotkov.5/ExtensionForDouble/ExtensionForDouble.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5FFAB8D6-860D-4274-867F-4BC7E75F3BD2}</ProjectGuid>
+    <ProjectGuid>{5C72241D-7BA3-429B-AF60-7D5691F22267}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ExtensionsForString</RootNamespace>
-    <AssemblyName>ExtensionsForString</AssemblyName>
+    <RootNamespace>ExtensionForDouble</RootNamespace>
+    <AssemblyName>ExtensionForDouble</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
